--- a/Technopolis/local.properties
+++ b/Technopolis/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 16 14:22:15 CET 2015
-sdk.dir=C\:\\Users\\Jonas\\AppData\\Local\\Android\\sdk
+#Wed Dec 16 16:20:13 CET 2015
+sdk.dir=/Users/vincent/Library/Android/sdk
