--- a/TechnopolisSwing/nbproject/project.properties
+++ b/TechnopolisSwing/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=be.ehb.database.swing.InterfaceSwing
+main.class=be.ehb.database.swing.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
